trying to fix margins on mobile

--- a/demo/quiz/quiz_files/permalink.css
+++ b/demo/quiz/quiz_files/permalink.css
@@ -264,14 +264,13 @@ input.action { *width:1;*overflow:visible;*padding:0 6px; }
 /*For Mobile devises*/
 
 @media (max-width: 600px) {
-	html, body {width: 320px}
 	.quiz {width: 100%; }
 	.quiz_cover {width: 100%; margin: auto; }
 	.c {clear: both; float: none; width: 100%; margin: auto;}
 	.quiz_img {width: 100%}
 	#buzz_sub_buzz .quiz .quiz_question.legacy .quiz_question_header img,#buzz_sub_buzz .quiz .quiz_question.text .quiz_question_header img  { width: 320px; }
 	#buzz_sub_buzz .quiz ul, #buzz_sub_buzz .quiz ol, #buzz_sub_buzz.suplist_long .quiz ol, #buzz_sub_buzz.suplist_long .quiz ul { margin:10px 0; }
-	#buzz_sub_buzz .quiz .quiz_question .quiz_question_header { float: none; margin-bottom: 15px; width: 320px; margin-right: auto; margin-left: auto; display: block; margin-top: 30px;}
+	#buzz_sub_buzz .quiz .quiz_question .quiz_question_header { float: none; margin-bottom: 15px; width: 100%; margin-right: auto; margin-left: auto; display: block; margin-top: 30px;}
 	#buzz_sub_buzz .quiz .quiz_question { overflow: hidden; width: 100%; margin: auto; }
 	#buzz_sub_buzz .quiz { float:none; margin: auto;}
 	#buzz_sub_buzz .quiz_question .smallImgAnswers .quiz_answer { display: table-cell; vertical-align: top; width: 90px; min-height: 90px; max-width: 90px }
